--- a/src/app/Componentes/menu/menu.component.html
+++ b/src/app/Componentes/menu/menu.component.html
@@ -1,1 +1,34 @@
-<p>menu works!</p>
+<nav
+  class="navbar navbar-expand-sm navbar-light"
+  style="background-color: #6a7dd4"
+>
+  <a class="navbar-brand" href="#">Cinito</a>
+  <button
+    class="navbar-toggler d-lg-none"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#menu"
+    aria-controls="menu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="menu">
+    <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
+    <div *ngIf="isLogged()">
+      <button class="btn btn-outline-danger" (click)="logout()">
+        Cerrar sesión
+      </button>
+    </div>
+    <div *ngIf="!isLogged()">
+      <button class="btn btn-outline-success" (click)="login()">
+        Iniciar sesión
+      </button>
+    </div>
+  </div>
+</nav>
