--- a/src/app/Componentes/peliculas/insert/insert.component.html
+++ b/src/app/Componentes/peliculas/insert/insert.component.html
@@ -1,10 +1,18 @@
 <form>
-  <label for="nombre">Nombre:</label>
-  <input class="form-control" id="nombre" type="text" name="nombre" />
+  <label for="titulo">Titulo:</label>
+  <input class="form-control" id="titulo" type="text" name="titulo" />
 
-  <label for="email">Email:</label>
-  <input class="form-control" id="email" type="text" name="email" />
+  <label for="resumen">Resumen:</label>
+  <input class="form-control" id="resumen" type="text" name="resumen" />
 
-  <label> <input type="checkbox" /> Recordarme </label>
-  <button type="submit">Enviar</button>
+  <label for="duracion">Duración (Minutos):</label>
+  <input class="form-control" id="duracion" type="number" name="duracion" />
+
+  <label for="productora">Productora:</label>
+  <input class="form-control" id="productora" type="text" name="productora" />
+
+  <label for="sala">Sala:</label>
+  <input class="form-control" id="sala" type="text" name="sala" />
+
+  <button class="btn btn-primary">Añadir</button>
 </form>
